# medical-assistant

./: .env.example  .gitignore  LICENSE  Medical_assistant_telegram_bot.ipynb  README.md  leaflet_schema.json  main.py  telegram_bot.py  vladimir_maksimov_medicine_assistant.ipynb
Desktop/Python/AI Bootcamp/TFB/medical-assistant/: .env
Desktop/Python/AI Bootcamp/TFB/medical-assistant/data_preprocessing/: Medicine_Details  df_leaflets.csv  df_leaflets_with_answers.csv  df_medicine_clean.csv
Desktop/Python/AI Bootcamp/TFB/medical-assistant/data_preprocessing/.ipynb_checkpoints/: df_leaflets-checkpoint.csv
Desktop/Python/AI Bootcamp/TFB/medical-assistant/model_training/: Model training for medical assistant v2.ipynb  Model-training-for-medical-assistant-v3.ipynb  medical-assistant-model-merging-v3.ipynb  medical-assistant-model-merging.ipynb  model-training-for-medical-assistant.ipynb
Desktop/Python/AI Bootcamp/TFB/medicine_assistant/: pyproject.toml
Desktop/Python/AI Bootcamp/TFB/medicine_assistant/data_preprocessing/: 2024-07-17 11.46.59.json  leaflet_schema.json
Desktop/Python/AI Bootcamp/TFB/medicine_assistant/data_preprocessing/.ipynb_checkpoints/: medicine_dataset_processing-checkpoint.ipynb
data_preprocessing/: medicine_dataset_processing.ipynb
data_preprocessing/.ipynb_checkpoints/: vladimir_maksimov_medicine_assistant-checkpoint.ipynb
model_training/: Further Model training for medical assistant.ipynb  medical-assistant-model-merging-v2.ipynb
